--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Text Tools - Powered by Gemini</title>
+    <title>LexiFlow- Powered by Gemini</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">🤖 AI Text Tools</div>
+            <div class="logo">LexiFlow</div>
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="detect.html">Detect</a></li>
@@ -21,9 +21,9 @@
 
     <main>
         <div class="tool-container" style="text-align: center;">
-            <h1>🤖 AI Text Tools</h1>
+            <h1>LexiFlow</h1>
             <p style="font-size: 1.2rem; margin-bottom: 3rem; color: #666;">
-                Powered by Google Gemini API
+                AI-powered text analysis and generation
             </p>
 
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-top: 3rem;">
